--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="visual">
         <div class="center_box">
           <div class="details">
-            <h2></h2>
-            <p></p>
-            <button></button>
+            <h2>Built<br />for flight</h2>
+            <p>Introducing product name.<br />Our lightest shoe, ever.</p>
+            <button>SHOP</button>
           </div>
         </div>
       </div>
@@ -43,19 +43,43 @@
           <h2>Women</h2>
           <a href="#x">
             <span>Shop now</span>
-            <img src="arrow.png" alt="" />
+            <img src="/images/arrow.png" alt="" />
           </a>
         </li>
         <li>
-          <h2>men</h2>
+          <h2>Men</h2>
           <a href="#x">
             <span>Shop now</span>
-            <img src="arrow.png" alt="" />
+            <img src="/images/arrow.png" alt="" />
           </a>
         </li>
       </ul>
 
-      <div class="product_new center_box"></div>
+      <div class="product_new center_box">
+        <h2>New releases</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <div class="item">Product name</div>
+            <div class="price">$186 CAD</div>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <div class="item">Product name</div>
+            <div class="price">$186 CAD</div>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <div class="item">Product name</div>
+            <div class="price">$186 CAD</div>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <div class="item">Product name</div>
+            <div class="price">$186 CAD</div>
+          </li>
+        </ul>
+      </div>
 
       <div class="product_top center_box"></div>
 
