--- a/pages/product.html
+++ b/pages/product.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
-    <title>Sam's Shoes</title>
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/sub.css" />
+    <title>Product name</title>
   </head>
   <body>
     <div class="container">
@@ -17,10 +18,8 @@
           <li><a href="#x">Accessories</a></li>
           <li><a href="#x">Sale</a></li>
         </ul>
-        <a href="#x">
-          <div class="logo">
-            <img src="/images/logo.png" alt="" />
-          </div>
+        <a href="../index.html">
+          <div class="logo"><img src="/images/logo.png" alt="" /></div>
         </a>
         <ul class="top_menu">
           <li>
@@ -32,107 +31,92 @@
         </ul>
       </div>
 
-      <div class="visual">
-        <div class="center_box">
-          <div class="details">
-            <h2>Built<br />for flight</h2>
-            <p>Introducing product name.<br />Our lightest shoe, ever.</p>
-            <button>SHOP</button>
+      <div class="section_01 center_box">
+        <div class="contents">
+          <div class="photo_box">
+            <div class="photo">
+              <img src="../images/product.png" alt="" />
+            </div>
+          </div>
+          <div class="size_box">
+            <p class="size_head">Women / Sneakers</p>
+            <p class="name">Product name</p>
+            <p class="price">$186 CAD</p>
+            <div class="size_option">
+              <p class="select">Select size</p>
+              <a href="#x">
+                <p class="guide">Size guide</p>
+              </a>
+            </div>
+            <div class="square_box">
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+              <button class="number">5</button>
+            </div>
+            <button class="cart">ADD TO CART</button>
           </div>
         </div>
       </div>
 
-      <ul class="product_01 center_box">
-        <li>
-          <h2>Women</h2>
-          <a href="#x">
-            <span>Shop now</span>
-            <img src="/images/arrow.png" alt="" />
-          </a>
-        </li>
-        <li>
-          <h2>Men</h2>
-          <a href="#x">
-            <span>Shop now</span>
-            <img src="/images/arrow.png" alt="" />
-          </a>
-        </li>
-      </ul>
+      <div class="section_02 center_box">
+        <div class="text_box">
+          <div class="text">
+            <h2>About this<br />product</h2>
+            <p>
+              Pellentesque ut purus diam. Sed in<br />dui consequat enim
+              venenatis<br />pretium. Sed facilisis dui quis libero<br />fermentum
+              faucibus.
+            </p>
+          </div>
+        </div>
+        <div class="img images_01"><img src="" alt="" /></div>
+        <div class="img images_02"><img src="" alt="" /></div>
+      </div>
 
       <div class="product_new center_box">
-        <h2>New releases</h2>
+        <h2>You may also like</h2>
         <ul>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="#x">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="#x">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="#x">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="#x">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
         </ul>
-      </div>
-
-      <div class="product_top center_box">
-        <h2>Top kicks</h2>
-        <ul>
-          <li>
-            <img src="" alt="" />
-            <a href="pages/product.html">
-              <div class="item">Product name</div>
-              <div class="price">$186 CAD</div>
-            </a>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <a href="pages/product.html">
-              <div class="item">Product name</div>
-              <div class="price">$186 CAD</div>
-            </a>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <a href="pages/product.html">
-              <div class="item">Product name</div>
-              <div class="price">$186 CAD</div>
-            </a>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <a href="pages/product.html">
-              <div class="item">Product name</div>
-              <div class="price">$186 CAD</div>
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="infos center_box">
-        <div class="infos_box">
-          <h2>Never miss<br />a drop.</h2>
-          <p>Receive updates about new<br />products and promotions.</p>
-          <button>JOIN MAILING LIST</button>
-        </div>
       </div>
 
       <div class="footer">
