--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </li>
       </ul>
 
-      <div class="product_new center_box">
+      <div class="products center_box">
         <h2>New releases</h2>
         <ul>
           <li>
@@ -93,7 +93,7 @@
         </ul>
       </div>
 
-      <div class="product_top center_box">
+      <div class="products center_box">
         <h2>Top kicks</h2>
         <ul>
           <li>
