--- a/pages/product.html
+++ b/pages/product.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/sub.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
+    />
     <title>Product name</title>
   </head>
   <body>
@@ -36,6 +40,12 @@
           <div class="photo_box">
             <div class="photo">
               <img src="../images/product.png" alt="" />
+            </div>
+            <div class="box box_left">
+              <a href="#x"><i class="xi-arrow-left"></i></a>
+            </div>
+            <div class="box box_right">
+              <a href="#x"><i class="xi-arrow-right"></i></a>
             </div>
           </div>
           <div class="size_box">
@@ -85,7 +95,7 @@
         <div class="img images_02"><img src="" alt="" /></div>
       </div>
 
-      <div class="product_new center_box">
+      <div class="products center_box">
         <h2>You may also like</h2>
         <ul>
           <li>
