--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <div class="container">
       <div class="header center_box">
         <ul class="nav">
-          <li><a href="#x">Women</a></li>
-          <li><a href="#x">Men</a></li>
-          <li><a href="#x">Kids</a></li>
-          <li><a href="#x">Accessories</a></li>
-          <li><a href="#x">Sale</a></li>
+          <li><a href="./pages/product.html">Women</a></li>
+          <li><a href="./pages/product.html">Men</a></li>
+          <li><a href="./pages/product.html">Kids</a></li>
+          <li><a href="./pages/product.html">Accessories</a></li>
+          <li><a href="./pages/product.html">Sale</a></li>
         </ul>
         <a href="#x">
           <div class="logo">
-            <img src="/images/logo.png" alt="" />
+            <img src="./images/logo.png" alt="" />
           </div>
         </a>
         <ul class="top_menu">
           <li>
-            <a href="#x"><img src="/images/search_icon.png" alt="" /></a>
+            <a href="#x"><img src="./images/search_icon.png" alt="" /></a>
           </li>
           <li>
-            <a href="#x"><img src="/images/cart_icon.png" alt="" /></a>
+            <a href="#x"><img src="./images/cart_icon.png" alt="" /></a>
           </li>
         </ul>
       </div>
@@ -45,16 +45,16 @@
       <ul class="product_01 center_box">
         <li>
           <h2>Women</h2>
-          <a href="#x">
+          <a href="./pages/product.html">
             <span>Shop now</span>
-            <img src="/images/arrow.png" alt="" />
+            <img src="./images/arrow.png" alt="" />
           </a>
         </li>
         <li>
           <h2>Men</h2>
-          <a href="#x">
+          <a href="./pages/product.html">
             <span>Shop now</span>
-            <img src="/images/arrow.png" alt="" />
+            <img src="./images/arrow.png" alt="" />
           </a>
         </li>
       </ul>
@@ -64,28 +64,28 @@
         <ul>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
@@ -98,28 +98,28 @@
         <ul>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
           </li>
           <li>
             <img src="" alt="" />
-            <a href="pages/product.html">
+            <a href="./pages/product.html">
               <div class="item">Product name</div>
               <div class="price">$186 CAD</div>
             </a>
@@ -176,16 +176,16 @@
               <div class="text">FOLLOW SAM’S</div>
               <div class="imgs">
                 <a href="#x">
-                  <img src="/images/sns_Facebook.png" alt="" />
+                  <img src="./images/sns_Facebook.png" alt="" />
                 </a>
                 <a href="#x">
-                  <img src="/images/sns_Instagram.png" alt="" />
+                  <img src="./images/sns_Instagram.png" alt="" />
                 </a>
                 <a href="#x">
-                  <img src="/images/sns_Twitter.png" alt="" />
+                  <img src="./images/sns_Twitter.png" alt="" />
                 </a>
                 <a href="#x">
-                  <img src="/images/sns_LinkedIN.png" alt="" />
+                  <img src="./images/sns_LinkedIN.png" alt="" />
                 </a>
               </div>
             </div>
