--- a/pages/product.html
+++ b/pages/product.html
@@ -23,14 +23,14 @@
           <li><a href="#x">Sale</a></li>
         </ul>
         <a href="../index.html">
-          <div class="logo"><img src="/images/logo.png" alt="" /></div>
+          <div class="logo"><img src="../images/logo.png" alt="" /></div>
         </a>
         <ul class="top_menu">
           <li>
-            <a href="#x"><img src="/images/search_icon.png" alt="" /></a>
+            <a href="#x"><img src="../images/search_icon.png" alt="" /></a>
           </li>
           <li>
-            <a href="#x"><img src="/images/cart_icon.png" alt="" /></a>
+            <a href="#x"><img src="../images/cart_icon.png" alt="" /></a>
           </li>
         </ul>
       </div>
@@ -170,16 +170,16 @@
               <div class="text">FOLLOW SAM’S</div>
               <div class="imgs">
                 <a href="#x">
-                  <img src="/images/sns_Facebook.png" alt="" />
+                  <img src="../images/sns_Facebook.png" alt="" />
                 </a>
                 <a href="#x">
-                  <img src="/images/sns_Instagram.png" alt="" />
+                  <img src="../images/sns_Instagram.png" alt="" />
                 </a>
                 <a href="#x">
-                  <img src="/images/sns_Twitter.png" alt="" />
+                  <img src="../images/sns_Twitter.png" alt="" />
                 </a>
                 <a href="#x">
-                  <img src="/images/sns_LinkedIN.png" alt="" />
+                  <img src="../images/sns_LinkedIN.png" alt="" />
                 </a>
               </div>
             </div>
